#12 [FEAT] Get Recipe (GET /recipes/:id)
* chore: update swagger docs

* feat: add get recipe route

* chore: add get recipe route docs
